AC_INIT(Makefile.in)
AC_PROG_CC
AC_PROG_CXX
AC_HEADER_STDC

dnl
dnl----------------------------
dnl--  Checking for BOOST 
dnl----------------------------
dnl
AC_CHECKING( for BOOST )
AC_ARG_WITH(boost,
 [  --with-boost[= DIR]  Specify where boost is located ],,)

if test "$with_boost" = "no" ; then
  AC_MSG_ERROR(** BOOST cannot be disabled **)
elif test -n "$with_boost" -a "$with_boost" != "yes" ; then
  dnl
  dnl --with-boost was specified explicitly... 
  dnl
  BOOST_DIR=$with_boost
else
  BOOST_DIR='/usr/include/boost'
fi

if ! test -d $BOOST_DIR/graph ; then
 AC_MSG_ERROR(** $BOOST_DIR/graph can not be found **)
else
 BOOST_DIR=$BOOST_DIR/graph
 AC_SUBST(BOOST_DIR, $BOOST_DIR)
fi

dnl
dnl----------------------------
dnl--  Checking for A* in BOOST 
dnl----------------------------
dnl
AC_CHECKING( for astar_search.hpp in $BOOST_DIR )

if ! test -f $BOOST_DIR/astar_search.hpp ; then
 AC_MSG_ERROR(** $BOOST_DIR/astar_search.hpp can not be found **)
fi

dnl
dnl----------------------------
dnl--  Checking for CGAL Libs
dnl----------------------------
dnl
AC_CHECKING( for CGAL )
AC_ARG_WITH(cgal,
[  --with-cgal[=no, DIR]  Specify where CGAL is located ],,)

if test "$with_cgal" = "no" ; then
  AC_MSG_RESULT( omitting CGAL )
else
  if test -n "$with_cgal" -a "$with_cgal" != "yes" ; then
    dnl ---------------------------------------
    dnl --with-cgal was specified explicitly... 
    dnl ---------------------------------------
    CGAL_DIR=$with_cgal
  else
    CGAL_DIR='/usr'
  fi

  if ! test -d $CGAL_DIR/include/CGAL; then
    AC_MSG_ERROR(** $CGAL_DIR/include/CGAL can not be found **)
  else

    CGAL_MKF=`find $CGAL_DIR/share/CGAL -name makefile_* -print`
    if test -z $CGAL_MKF; then
      CGAL_MKF=`find $CGAL_DIR/make -name makefile_* -print`
    fi

    AC_SUBST(CGAL_MKF,  $CGAL_MKF)

    if test -d $CGAL_DIR/lib64; then
       MLIB='lib64'
    else 
       MLIB='lib'
    fi 

    CGAL_LIB=$CGAL_DIR/$MLIB
    CGAL_DIR=$CGAL_DIR/include
    AC_SUBST(CGAL_DIR, $CGAL_DIR)
    AC_SUBST(CGAL_LIB, $CGAL_LIB)
  fi
fi

dnl
dnl----------------------------
dnl--  Checking for GAUL Libs
dnl----------------------------
dnl
AC_CHECKING( for GAUL )
AC_ARG_WITH(gaul,
[  --with-gaul[=no, DIR]  Specify where GAUL is located ],,)

if test "$with_gaul" = "no" ; then
  AC_MSG_RESULT( omitting GAUL )
else
  if test -n "$with_gaul" -a "$with_gaul" != "yes" ; then
    dnl ---------------------------------------
    dnl --with-gaul was specified explicitly... 
    dnl ---------------------------------------
    GAUL_DIR=$with_gaul
  else
    GAUL_DIR='/usr'
  fi

  if test -d $GAUL_DIR/lib64; then
    MLIB='lib64'
  else
    MLIB='lib'
  fi 
  
  if ! test -d $GAUL_DIR/include/gaul -a -f $GAUL_DIR/lib/libgaul.a -o -f $GAUL_DIR/lib64/libgaul.a; then
    AC_MSG_ERROR(** $GAUL_DIR/include/gaul or $GAUL_DIR/$MLIB/libgaul.a can not be found **)
  else
    GAUL_LIB=$GAUL_DIR/$MLIB
    GAUL_DIR=$GAUL_DIR/include/gaul
    AC_SUBST(GAUL_DIR, $GAUL_DIR)
    AC_SUBST(GAUL_LIB, $GAUL_LIB)
  fi
fi


dnl
dnl
AC_OUTPUT(Makefile)
